objects/Status_Notes__c/Status_Notes__c.object-meta.xml
<CustomObject>
    <label>Status Notes</label>
    <nameField>
        <displayFormat>Status-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Status Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>