objects/Status_Notes__c/fields/Activities_Completed_Since_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>Activities_Completed_Since_Last_Update__c</fullName>
    <label>Activities Completed Since Last Update</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>