objects/Status_Notes__c/fields/Activities_Expected_Next_Week__c.field-meta.xml
<CustomField>
    <fullName>Activities_Expected_Next_Week__c</fullName>
    <label>Activities Expected Next Week</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>