objects/Status_Notes__c/fields/BP_T_Vertical__c.field-meta.xml
<CustomField>
    <fullName>BP_T_Vertical__c</fullName>
    <label>BP&amp;T Vertical</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>[No Vertical]</fullName>
            </value>
            <value>
                <fullName>Applications: Corp Apps</fullName>
            </value>
            <value>
                <fullName>Applications: Network Mgmt</fullName>
            </value>
            <value>
                <fullName>Applications: Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Applications: Service Fulfullment</fullName>
            </value>
            <value>
                <fullName>BI</fullName>
            </value>
            <value>
                <fullName>Business Process</fullName>
            </value>
            <value>
                <fullName>DBA</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>