objects/Status_Notes__c/fields/Functional_Group__c.field-meta.xml
<CustomField>
    <fullName>Functional_Group__c</fullName>
    <label>Functional Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing Operations</fullName>
            </value>
            <value>
                <fullName>Care: Customer Care</fullName>
            </value>
            <value>
                <fullName>Care: Order Entry</fullName>
            </value>
            <value>
                <fullName>Engineering: Data</fullName>
            </value>
            <value>
                <fullName>Engineering: OSP</fullName>
            </value>
            <value>
                <fullName>Engineering: Switch</fullName>
            </value>
            <value>
                <fullName>Engineering: Transport</fullName>
            </value>
            <value>
                <fullName>BP&amp;T: Process</fullName>
            </value>
            <value>
                <fullName>BP&amp;T: Training</fullName>
            </value>
            <value>
                <fullName>BP&amp;T: Information Technology</fullName>
            </value>
            <value>
                <fullName>Marketing: Graphic Design</fullName>
            </value>
            <value>
                <fullName>Marketing: Marketing Operations</fullName>
            </value>
            <value>
                <fullName>Marketing: PR</fullName>
            </value>
            <value>
                <fullName>Marketing: Product Development</fullName>
            </value>
            <value>
                <fullName>Marketing: Product Management</fullName>
            </value>
            <value>
                <fullName>Marketing: Product Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing: Project Management</fullName>
            </value>
            <value>
                <fullName>Marketing: Sales Enablement</fullName>
            </value>
            <value>
                <fullName>Marketing: Solution Marketing</fullName>
            </value>
            <value>
                <fullName>Marketing: Technical Writing</fullName>
            </value>
            <value>
                <fullName>Operations: Field Services</fullName>
            </value>
            <value>
                <fullName>Operations: Network</fullName>
            </value>
            <value>
                <fullName>Operations: Repair</fullName>
            </value>
            <value>
                <fullName>Provisioning: Deployment/Structure Load</fullName>
            </value>
            <value>
                <fullName>Provisioning: MSS Equipment Design</fullName>
            </value>
            <value>
                <fullName>Provisioning: OSS Arch/NPD</fullName>
            </value>
            <value>
                <fullName>Sales: Sales</fullName>
            </value>
            <value>
                <fullName>Sales: Sales Engineering</fullName>
            </value>
            <value>
                <fullName>Sales: Sales Operations</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>